Implemented grpc streaming for comments